# mediator-coevo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
config/: default.toml
config/experiments/: full_traces.toml  learned_mediator.toml  no_feedback.toml  shared_notes.toml  static_mediator.toml
skills/executor/: SKILL.md
skills/mediator/: SKILL.md  coordination-protocol.md
skills/planner/: SKILL.md
src/mediated_coevo/: __init__.py  baselines.py  conditions.py  config.py  main.py  orchestrator.py  token_budget.py  utils.py
src/mediated_coevo/agents/: __init__.py  base.py  executor.py  mediator.py  planner.py
src/mediated_coevo/benchmarks/: __init__.py  skillsbench.py  task_sets.py
src/mediated_coevo/conditions/: __init__.py  full_traces.py  learned_mediator.py  no_feedback.py  shared_notes.py  static_mediator.py
src/mediated_coevo/evolution/: __init__.py  compactor.py  reflector.py  skill_advisor.py
src/mediated_coevo/llm/: __init__.py  client.py
src/mediated_coevo/models/: __init__.py  history_signals.py  iteration.py  (+4 more)
tests/: test_artifact_store.py  test_baseline_matrix.py  test_config_persistence.py  test_executor_agent_failure_modes.py  test_feedback_conditions.py  test_harbor_parse_execution_trace.py  test_history_store_contrastive_pairs.py  test_orchestrator_tagging.py  test_orchestrator_two_tasks_no_leakage.py  test_reflector_provenance.py  test_skill_advisor_batch_provenance.py  test_skill_store_entrypoint.py  test_skillsbench_integration.py  test_skillsbench_repository.py  test_task_sets.py  test_token_budget.py
(+4 files in other folders)
